# Agentic-AI-Churn-Predictor

./: .dockerignore  .env.example  .gitignore  GUIDEBOOK.md  README.md  celery_app.py  codex_review_results.txt  pyproject.toml  requirements.txt  setup.md  tasks.py
.github/workflows/: ci.yml  deploy.yml  retrain.yml
agents/: counterfactual_agent.py  data_intelligence_agent.py  explanation_agent.py  feedback_agent.py  hitl_agent.py  orchestrator.py  prediction_agent.py  retention_strategist.py  state.py
agents/tools/: counterfactual_tool.py  crm_executor_tool.py  drift_tool.py  model_tool.py  shap_tool.py  slack_tool.py  sql_tool.py
app/: __init__.py  hitl_webhook.py  main.py
app/middleware/: auth.py
app/routers/: agent.py  analytics.py  auth.py  customers.py  gdpr.py
app/websockets/: __init__.py  agent_stream.py  customer_broadcast.py
config/: agents.yaml  settings.py
data/synthetic/: generate_synthetic.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.frontend.dockerignore  Dockerfile.worker  docker-compose.prod.yml  docker-compose.yml
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: app-build-manifest.json  trace
k8s/: api-deployment.yaml  chromadb-deployment.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  postgres-statefulset.yaml  redis-deployment.yaml  secrets.yaml  worker-deployment.yaml
memory/: redis_state.py  vector_store.py
monitoring/: grafana_dashboard.json  prometheus.yml  prometheus_metrics.py
src/explainability/: __init__.py  benchmarking.py  (+4 more)
(+175 files in other folders)
