[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-intelligence-platform"
version = "0.1.0"
description = "Agentic AI-powered Customer Churn Intelligence Platform"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "agents*", "app*", "config*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | mlruns
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src", "agents", "app", "config"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "mlruns",
    "build",
    "dist",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["mlruns/", "build/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src", "agents", "app"]
omit = ["*/tests/*", "*/__init__.py"]
